<resources>
    <string name="app_name">ProfitPal</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">
        Nice to meet you, come join our community!
        <br><b>Login</b>if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login</b></font>
        if you already have an account.
    </string>
    <string name="your_email_or_username">Your email or username</string>
</resources>